--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router": "^6.26.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "tailwind-merge": "^2.5.2",
     "web-vitals": "^2.1.4"
   },
